--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 #trafficLight{
-  background-color: black;
   width: 100px;
-  height: 200px;
+  height: 100px;
+  border-radius: 50%;
+  background: black;
 }
